--- a/src/views/buses/listar.hbs
+++ b/src/views/buses/listar.hbs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/transporte/agregar.css">
+<link rel="stylesheet" href="/css/transporte/listar.css">
 <from action="/"method="post">
 <body>
 <head>
@@ -75,7 +75,6 @@
 </div>
 
 
-
 <footer id="footer" class="">
       <div class="container">
         <div class="row text-left">
@@ -106,8 +105,8 @@
           </div>
           <div id="follow">
            <b> <p>Síguenos</p></b>
-           <a href=""><img id="ig" src="/img/instagram.png" alt=""></a>
-           <a href=""><img id="fb" src="/img/facebook.png" alt=""></a>
+           <a href=""><img id="ig" src="/img/insta.png" alt=""></a>
+           <a href=""><img id="fb" src="/img/fb.png" alt=""></a>
           </div>
         </div>
       </div>
