--- a/src/views/chofer/agregar.hbs
+++ b/src/views/chofer/agregar.hbs
@@ -8,6 +8,7 @@
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
                     <a href="/inicio">Inicio</a>
+                    <a id="listar" href="#">Listar</a>
                     <a id="administrador" href="#">Administrador</a>
                     <img id="img2" src="/img/perfil.png" alt="">
             </div>
@@ -17,7 +18,7 @@
   <div id="container">
     <img class="fondo" src="/img/registro de choferes.jpg" alt="">
     <h2>Registro De Choferes</h2>
-    <u><h3>Datos personales</h3></u>
+    <h3>Datos personales</h3>
     <form action="#" method="post">
       <label id="numce" for="cedula">Cedula</label> <br>
       <input type="number" id="cedula" name="cedula_chofer" required> 
@@ -49,14 +50,14 @@
     </form> <br>
 
 
-     <!-- <label id="pronvin" for="apellido">Provincia</label>
+      <label id="pronvin" for="apellido">Provincia</label>
       <input type="text" id="provincia" name="provincia" required>
 
       <label id="parroquia" for="parroquia">Parroquia</label> <br>
       <input type="text" id="parroquiaIn" name="parroquia" required>
 
       <label id="canton" for="canton">Canton</label> <br>
-      <input type="text" id="cantonIn" name="canton" required> -->
+      <input type="text" id="cantonIn" name="canton" required> 
 
 
       <label id="direccion" for="direccion">Direccion</label> <br>
