--- a/src/views/cooperativa/agregar.hbs
+++ b/src/views/cooperativa/agregar.hbs
@@ -7,7 +7,8 @@
             <div class="navbar">
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
-                    <a id="inicio" href="/src/views/inicio.hbs">Inicio</a>
+                    <a  href="/inicio2">Inicio</a>
+                    <a id="listar" href="#">Listar</a>
                     <a id="administrador" href="#">Administrador</a>
                     <img id="img2" src="/img/perfil.png" alt="">
             </div>
@@ -33,9 +34,9 @@
 
         <label id="horario" for="horarios">Horarios de atencion</label>  
         <select id="horarioAte" name="horarios" required>
-          <option value="horario1">7:00 am a 13:00pm</option>
-          <option value="horario2">15:00pm a 18:00pm</option>
-          <option value="horario3">19:00pm a 23:00pm</option>
+          <option value="masculino">7:00 am a 13:00pm</option>
+          <option value="femenino">15:00pm a 18:00pm</option>
+          <option value="otro">19:00pm a 23:00pm</option>
 
        <br>
 
