--- a/src/views/inicio2.hbs
+++ b/src/views/inicio2.hbs
@@ -23,10 +23,15 @@
     <div id="card1">
         <img src="/img/login.jpg" alt="" style="width:80%">
             <h1>Buses y</h1>
-            <h1>Cooperativa</h1>
+         
             <a href="/buses/agregar">Ver más..</a>
             
     </div>
+    <div id="card2">
+            <img src="/img/login.jpg" alt="" style="width:80%">
+                <h1>Cooperativa</h1> <br>
+                <a href="/cooperativa/agregar">Ver más..</a>
+        </div>
         <div id="card2">
             <img src="/img/empleados.png" alt="" style="width:80%">
                 <h1>Empleados</h1> <br>
