--- a/src/public/css/chofer/listar.css
+++ b/src/public/css/chofer/listar.css
@@ -1,7 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
+  background-color: #e5e5f7;
+  background-image:  radial-gradient(#040a84 0.75px, transparent 0.75px), radial-gradient(#040a84 0.75px, #e5e5f7 0.75px);
+  background-size: 30px 30px; 
+  background-position: 0 0,15px 15px;
 }
 #contenedorhe{
   position: absolute;
@@ -27,7 +30,7 @@ h1{
 }
 
 #contenedor1 {
-  border: 2px solid black;
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 20px;
   padding: 10px;
   width: 1100px;
@@ -49,7 +52,7 @@ h1{
 
 .licencia{
   position: absolute;
-  top: 10px;
+  top: -7px;
   left: 900px;
 }
 .navbar {
@@ -67,7 +70,7 @@ h1{
   }
 
   .navbar a:hover {
-    color: rgb(161, 157, 157);
+    color: rgb(255, 255, 255);
   }
 #imagen{
   width: 100%;
@@ -106,18 +109,10 @@ h1{
   margin: 80px 110px;
   padding: 20px;
   box-shadow: 0px 0px 10px rgb(0, 0, 0);
-  color: #000000;
+  background-color: rgb(255, 255, 255);
 }
 
-#container .fondo{
-  opacity: 0.5;
-  width: 1129px;
-  height: 575px;
-  position: absolute;
-  left: 110px;
-  top: 213px;
 
-}
 .row #nombre{
   position: absolute;
   left: 415px;
@@ -134,6 +129,7 @@ h1{
   position: absolute;
   left: 1005px;
   top: 895px;
+
 }
 .button{
   position: absolute;
