--- a/src/public/css/transporte/listar.css
+++ b/src/public/css/transporte/listar.css
@@ -1,25 +1,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f4f4f4;
-}
-#contenedorhe{
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-}
-#contenedor{
-  position: re;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
+  background-color: #e5e5f7;
+    background-image:  radial-gradient(#040a84 0.75px, transparent 0.75px), radial-gradient(#040a84 0.75px, #e5e5f7 0.75px);
+    background-size: 30px 30px; 
+    background-position: 0 0,15px 15px;
 }
 
 h1{
@@ -27,26 +12,26 @@ h1{
 }
 
 h2 {
-  position: absolute;
+  position: relative;
   left: 100px;
-  top: 727px;
+  top: 0px;
 }
 
  .encargado{
-  position: absolute;
-  top: 730px;
+  position: relative;
+  top: -135px;
   left: 1050px;
 } 
 
 .ruta{
-  position: absolute;
-  top: 730px;
-  left: 500px;
+  position: relative;
+  top: -45px;
+  left: 580px;
 }
 
 .horarios{
-  position: absolute;
-  top: 730px;
+  position: relative;
+  top: -90px;
   left: 800px;
 }
 .navbar {
@@ -99,23 +84,13 @@ h2 {
 }
 
 .row{
-  max-width: 2000px;
-  height: 310px;
-  margin: 80px 110px;
-  padding: 20px;
-  box-shadow: 0px 0px 10px rgb(0, 0, 0);
-  color: #000000;
-}
+  position: relative;
+  top: 0px;
+  left: 0px;
 
-#container .fondo{
-  opacity: 0.5;
-  width: 1129px;
-  height: 575px;
-  position: absolute;
-  left: 110px;
-  top: 213px;
 
 }
+
 .row #cooperativa{
   position: absolute;
   left: 135px;
