--- a/src/views/Encomienda/agregar.hbs
+++ b/src/views/Encomienda/agregar.hbs
@@ -8,6 +8,7 @@
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
                  <a href="/inicio2">Inicio</a>
+                 <a id="listar" href="#">Listar</a>
                     <a id="administrador" href="#">Administrador</a>
                     <img id="img2" src="/img/perfil.png" alt="">
             </div>
