--- a/src/views/empleado/agregar.hbs
+++ b/src/views/empleado/agregar.hbs
@@ -9,6 +9,7 @@
                 <div id="imagen">
                     <img src="/img/logon.png"></img></div>
                     <a href="/inicio2">Inicio</a>
+                    <a href="#">Listar</a>
                     <a id="administrador" href="#">Administrador</a>
                     <img id="img2" src="/img/perfil.png" alt="">
             </div>
