--- a/src/views/inicio.hbs
+++ b/src/views/inicio.hbs
@@ -22,9 +22,13 @@
     <div id="card1">
         <img src="/img/login.jpg" alt="" style="width:80%">
             <h1>Buses y</h1>
-            <h1>Cooperativa</h1>
             <a href="/buses/agregar">Ver más..</a>
     </div>
+    <div id="card2">
+            <img src="/img/login.jpg" alt="" style="width:80%">
+                <h1>Cooperativa</h1> <br>
+                <a href="/cooperativa/agregar">Ver más..</a>
+        </div>
         <div id="card2">
             <img src="/img/empleados.png" alt="" style="width:80%">
                 <h1>Empleados</h1> <br>
